changes maded innn

--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,18 @@
-PORT=4000
-ADMIN_WHATSAPP=+919566806800
+# Backend Example Environment File
+
+# Frontend URL (Vercel or local)
+FRONTEND_URL=http://localhost:5173
+
+# MongoDB Connection
+MONGO_URI=YOUR_MONGO_CONNECTION_STRING
+
+# JWT Auth Secret
+JWT_SECRET=YOUR_SECRET_KEY
+
+# Cloudinary Credentials
+CLOUDINARY_CLOUD_NAME=YOUR_CLOUD_NAME
+CLOUDINARY_API_KEY=YOUR_CLOUD_API_KEY
+CLOUDINARY_API_SECRET=YOUR_CLOUD_API_SECRET
+
+# Admin WhatsApp Notification Number
+ADMIN_WHATSAPP=+91XXXXXXXXXX
